k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datareasonagentservices
  labels:
    app: datareasonagentservice
